adding api docs with swagger
