# controllers/auth.controller.go
@@ -10,14 +10,15 @@ import (
 	"github.com/kennizen/e-commerce-backend/utils"
 )
 
-// @Summary      List accounts
-// @Description  get accounts
-// @Tags         accounts
+// @Summary      User Login
+// @Description  API for user login using email and password
+// @Tags         Auth
 // @Accept       json
 // @Produce      json
-// @Failure      400
-// @Failure      404
-// @Failure      500
+// @Param        user body service.LoginUserPayload true "Login credentials"
+// @Success      200  {object} utils.ResUserWithData
+// @Failure      400  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
 // @Router       /login [post]
 func LoginController(w http.ResponseWriter, r *http.Request) {
 	var payload service.LoginUserPayload
@@ -42,6 +43,16 @@ func LoginController(w http.ResponseWriter, r *http.Request) {
 
 // ---------------------------------------------------------------------------------------- //
 
+// @Summary      User Register
+// @Description  API for registering users
+// @Tags         Auth
+// @Accept       json
+// @Produce      json
+// @Param        user body service.RegisterUserPayload true "Register user payload"
+// @Success      201  {object} utils.ResUser
+// @Failure      400  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /register [post]
 func RegisterController(w http.ResponseWriter, r *http.Request) {
 	var payload service.RegisterUserPayload
 
@@ -66,6 +77,16 @@ func RegisterController(w http.ResponseWriter, r *http.Request) {
 
 // ---------------------------------------------------------------------------------------- //
 
+// @Summary      Renew Access Token
+// @Description  API for renewing the access token. Make sure to provide the refresh token to get the new tokens
+// @Tags         Auth
+// @Accept       json
+// @Produce      json
+// @Param        Authorization header string true "Bearer refreshToken"
+// @Success      201  {object} utils.ResUserWithData
+// @Failure      401  {object} utils.ResUser
+// @Failure      500  {object} utils.ResUser
+// @Router       /renew-access-token [get]
 func RenewAccessToken(w http.ResponseWriter, r *http.Request) {
 	token := r.Header.Get("Authorization")
 
